// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snippet: #0 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
'use strict' /* comment */;
=====================================output=====================================
"use strict" /* comment */

================================================================================
`;

exports[`snippet: #0 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
'use strict' /* comment */;
=====================================output=====================================
"use strict" /* comment */;

================================================================================
`;

exports[`snippet: #1 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
function foo() {
  'use strict' /* comment */;
}
=====================================output=====================================
function foo() {
  "use strict" /* comment */
}

================================================================================
`;

exports[`snippet: #1 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function foo() {
  'use strict' /* comment */;
}
=====================================output=====================================
function foo() {
  "use strict" /* comment */;
}

================================================================================
`;

exports[`snippet: #2 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
'use strict' // comment
=====================================output=====================================
"use strict" // comment

================================================================================
`;

exports[`snippet: #2 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
'use strict' // comment
=====================================output=====================================
"use strict"; // comment

================================================================================
`;

exports[`snippet: #3 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
function foo() {
  'use strict' // comment
}
=====================================output=====================================
function foo() {
  "use strict" // comment
}

================================================================================
`;

exports[`snippet: #3 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function foo() {
  'use strict' // comment
}
=====================================output=====================================
function foo() {
  "use strict"; // comment
}

================================================================================
`;

exports[`snippet: #4 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
'use strict';

/* comment */
(function () {})();
=====================================output=====================================
"use strict"

/* comment */
;(function () {})()

================================================================================
`;

exports[`snippet: #4 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
'use strict';

/* comment */
(function () {})();
=====================================output=====================================
"use strict";

/* comment */
(function () {})();

================================================================================
`;

exports[`snippet: #5 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
function foo() {
  'use strict';

  /* comment */
  (function () {})();
}
=====================================output=====================================
function foo() {
  "use strict"

  /* comment */
  ;(function () {})()
}

================================================================================
`;

exports[`snippet: #5 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function foo() {
  'use strict';

  /* comment */
  (function () {})();
}
=====================================output=====================================
function foo() {
  "use strict";

  /* comment */
  (function () {})();
}

================================================================================
`;

exports[`snippet: #6 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
'use strict';

// comment
(function () {})();
=====================================output=====================================
"use strict"

// comment
;(function () {})()

================================================================================
`;

exports[`snippet: #6 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
'use strict';

// comment
(function () {})();
=====================================output=====================================
"use strict";

// comment
(function () {})();

================================================================================
`;

exports[`snippet: #7 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
function foo() {
  'use strict';

  // comment
  (function () {})();
}
=====================================output=====================================
function foo() {
  "use strict"

  // comment
  ;(function () {})()
}

================================================================================
`;

exports[`snippet: #7 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function foo() {
  'use strict';

  // comment
  (function () {})();
}
=====================================output=====================================
function foo() {
  "use strict";

  // comment
  (function () {})();
}

================================================================================
`;
